Removes scrollbar bug. Probably not the most perfect solution but it seems to still work well for mobile screens

--- a/website/static/sidebar.css
+++ b/website/static/sidebar.css
@@ -124,6 +124,7 @@ html {
   transition: 0.6s ease;
   top: 0;
   bottom: 0;
+  overflow: hidden;
 }
 
 main {
